# anti-gav-ty

./: README.md
agent/: Cargo.toml  Makefile  agent.yaml
agent/src/: agent.rs  config.rs  error.rs  main.rs
agent/src/device/: mod.rs
agent/src/firewall/: mod.rs
agent/src/nextdns/: mod.rs
backend/: .dockerignore  Dockerfile  Makefile  go.mod  go.sum
backend/cmd/server/: main.go
backend/configs/: backend.yaml
backend/internal/config/: config.go
backend/internal/database/: database.go  migrate.go
backend/internal/gateway/: handler.go  repository.go
backend/internal/logger/: logger.go
backend/internal/server/: server.go  server_test.go
backend/migrations/: 000001_create_gateways_table.up.sql
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
