[package]
name = "anti-gav-ty-agent"
version = "0.1.0"
edition = "2021"
description = "Gateway agent for anti-gav-ty platform - manages firewall and device discovery"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
mac_address = "1"
hostname = "0.4"
local-ip-address = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
